[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Use rustls (no OpenSSL) so we can build static with musl offline
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "macros"] }
dotenv = "0.15"
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4"] }
time = "0.3"
